<resources>
    <string name="app_name">英臻车联3.0</string>
    <string name="btn_login">登录</string>
    <string name="btn_forgetpwd">忘记密码?</string>
    <string name="login_number">登录账号</string>
    <string name="login_pwd">登录密码</string>
    <string name="rem_pwd">记住密码</string>
    <string name="ed_yzm">请输入验证码</string>
    <string name="search">搜索</string>
    <string name="car_veh">车辆监控</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="detail">详情</string>
    <string name="ggyc">光感异常</string>
    <string name="status_device">设备状态:</string>
    <string name="status_offline">离线</string>
    <string name="last_loc_time">最后定位时间:</string>
    <string name="loc_type">定位类型:</string>
    <string name="jz_loc">基站定位</string>
    <string name="close_loc">跟踪</string>
    <string name="xfzl">下发指令</string>
    <string name="trajectory">轨迹</string>
    <string name="navigation">导航</string>
    <string name="last_loc_address">最后定位地址:</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="impor_care">重点关注</string>
    <string name="et_search">请输入设备名、车架号、借款人</string>
    <string name="no_setting_time">未设置时间</string>

    <string name="mis_folder_all">All Images</string>
    <string name="mis_photo_unit">Shot</string>
    <string name="mis_permission_rationale_write_storage">Storage write permission is needed to save the image.</string>
    <string name="mis_error_image_not_exist">Image error</string>
    <string name="mis_msg_no_camera">No system camera found</string>
    <string name="mis_permission_dialog_title">Permission Deny</string>
    <string name="mis_permission_dialog_ok">OK</string>
    <string name="mis_permission_dialog_cancel">CANCEL</string>
    <string name="mis_msg_amount_limit">Select images amount is limit</string>
    <string name="mis_action_done">Done</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_error_no_permission">Has no permission</string>
    <string name="mis_tip_take_photo">Take photo</string>


    <string name="glide_plus_icon_string">android.resource://</string>

</resources>
