<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center">
        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/view_radius"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:textColor="#FF4A4A4A"
            android:text="@string/app_name"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@mipmap/name2" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/login_number"
                android:singleLine="true"
                android:textColorHint="#FF4A4A4A"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignLeft="@+id/ll1"
            android:layout_alignRight="@+id/ll1"
            android:layout_below="@+id/ll1"
            android:background="@drawable/login_bg_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@mipmap/password2" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/login_pwd"
                android:singleLine="true"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:textColorHint="#FF4A4A4A"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/rl_yzm"
            android:layout_below="@id/ll2"
            android:layout_alignLeft="@+id/ll1"
            android:layout_alignRight="@+id/ll1"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="32dp">

            <EditText
                android:id="@+id/yzm"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:background="@drawable/edit_border"
                android:hint="@string/ed_yzm"
                android:textSize="14sp"
                android:paddingLeft="5dp"/>
            <ImageView
                android:id="@+id/pic_yzm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_marginLeft="-3dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/rili"
                />
        </LinearLayout>

        <!--<EditText-->
        <!--android:id="@+id/yzm"-->
        <!--android:textSize="13sp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_alignLeft="@+id/username"-->
        <!--android:layout_alignRight="@+id/username"-->
        <!--android:layout_below="@+id/password"-->
        <!--android:hint="验证码" />-->

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/ll1"
            android:layout_alignRight="@id/ll1"
            android:layout_below="@id/rl_yzm"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/rem_pwd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentLeft="true"
                android:text="@string/rem_pwd" />

            <TextView
                android:id="@+id/forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:textColor="#2494F1"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/btn_forgetpwd" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/ll1"
            android:layout_alignRight="@id/ll1"
            android:layout_below="@id/rl1"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_radius"
                android:text="@string/btn_login"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>
